--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,14 +4,14 @@ steps:
   entrypoint: 'bash'
   args: [
    '-c', 
-   'docker pull gcr.io/mystic-subject-338316/my-app-vue:latest || exit 0'
+   'docker pull gcr.io/	wide-surge-335807/my-app-vue:latest || exit 0'
   ]
 # Step 2
 - name: gcr.io/cloud-builders/docker
   args: [
    'build', 
    '-t', 
-   'gcr.io/mystic-subject-338316/my-app-vue:latest',
+   'gcr.io/wide-surge-335807/my-app-vue:latest',
    '.'
   ]
   dir: 'my-app-vue'
@@ -28,7 +28,7 @@ steps:
    'image', 
    'deployment', 
    'my-app-vue', 
-   'my-app-vue=gcr.io/mystic-subject-338316/my-app-vue:latest'
+   'my-app-vue=gcr.io/wide-surge-335807/my-app-vue:latest'
   ]
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=europe-west1-d'
