--- a/deploymentService.yaml
+++ b/deploymentService.yaml
@@ -15,10 +15,11 @@ spec:
         run: my-app-vue
     spec:
       containers:
-      - image: gcr.io/[mystic-subject-338316]/my-app-vue:latest #Replace [PROJECT-ID] accordingly
+      - image: gcr.io/wide-surge-335807/my-app-vue:latest 
         name: my-app-vue
         ports:
         - containerPort: 8080
+
 ---
 kind: Service
 apiVersion: v1
